# aq-latam-take-home

./: .gitignore  .gitleaks.toml  .redocly.yaml  AGENTS.md  README.md  justfile  lefthook.yml
.github/workflows/: ci.yml
backend/: .gitignore  alembic.ini  env.example  pyproject.toml  railway.json  seed_data.sql
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_initial_schema.py  0001_initial_schema.sql
backend/app/: __init__.py  config.py  db.py  deps.py  errors.py  evaluation_detail.py  history_detail.py  jsonb_schemas.py  logging.py  main.py  models.py  owners.py  panel_state.py  repositories.py  schemas.py  turn_flow.py
backend/app/engine/: __init__.py  analyze.py  evaluation.py  gateway.py  generate.py  orchestrator.py  policy.py  prompts.py  rationales.py
backend/app/routes/: __init__.py  history.py  jobs.py  sessions.py
backend/docs/: CONTRACT_DECISIONS.md  IMPLEMENTATION_DECISIONS.md  backend-database-decisions.md  decision-index.md  schema.sql
backend/docs/adr/: ADR-001-schema-first-sql-through-alembic.md  ADR-002-sync-sqlalchemy-engine.md  ADR-003-three-phase-turn-transaction-choreography.md  ADR-004-synchronous-evaluation-in-request-path.md  ADR-005-separate-strict-jsonb-and-api-models.md  ADR-006-json-mode-validation-for-jsonb-uuids.md  ADR-007-read-time-derived-analytics.md  ADR-008-db-gated-modules-outside-unit-coverage-gate.md
backend/scripts/: check_contract.py  pipeline_smoke.py  seed.py
backend/tests/: conftest.py  test_config.py  test_engine_policy.py  test_engine_rationales.py  test_errors.py  test_jsonb_schemas.py  test_main.py  test_owners.py
docs/: ai-interviewer-platform-spec.md  contract-invariants.md  decisions-log.md  home_test_requirements.md  scaling-proposal.md
frontend/: .env.example  biome.json  knip.json  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/components/: job-card.tsx  job-list-states.tsx  retry-button.tsx
frontend/components/history/: empty-history.tsx  role-filter.tsx  score-trend-chart.tsx  session-card.tsx  turn-navigator.tsx
frontend/components/interview/: answer-area.tsx  competency-chips.tsx  decision-panel.test.tsx  decision-panel.tsx  done-button.tsx  early-end-dialog.tsx  interview-header.tsx  interview-room.tsx  question-display.tsx  speaking-orb.tsx  thinking-indicator.tsx  welcome-screen.tsx
frontend/components/results/: competency-score-card.tsx  evaluation-limitations.tsx  narrative-section.tsx  score-bar.tsx  transcript-turn.tsx
frontend/components/shared/: empty-state.tsx  error-state.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  skeleton.tsx  tabs.tsx
frontend/docs/adr/: ADR-001-nextjs-domain-grouped-architecture.md  ADR-005-interview-state-machine-and-reasoning-contract.md  ADR-006-answer-input-provider-neutrality.md  ADR-007-current-session-route-shape.md  ADR-008-real-mode-only.md
frontend/hooks/: use-answer-input-controller.test.ts  use-answer-input-controller.ts  use-interview-machine.test.ts  use-interview-machine.ts  use-owner-id.ts  use-speech-recognition.ts  use-speech-synthesis.ts
frontend/lib/: contract-smoke.test.ts  format-date.ts  owner-id.ts  pending-turn.test.ts  pending-turn.ts
frontend/lib/api/: client.test.ts  client.ts  evaluation.ts  history.ts  jobs.ts  sessions.ts
frontend/lib/results/: evidence.test.ts  evidence.ts  limitations.test.ts  limitations.ts  verdict.test.ts  verdict.ts
frontend/scripts/: check-contract-types.mjs
frontend/test/: fixtures.ts
frontend/types/: competency.ts  evaluation.ts  job.ts  session.ts  turn.ts
frontend/types/api/: contract.ts
openspec/: config.yaml
openspec/changes/add-ci-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/define-api-contract/: design.md  proposal.md  tasks.md
openspec/changes/implement-backend/: design.md  proposal.md  tasks.md
openspec/changes/implement-frontend/: design.md  proposal.md  tasks.md
openspec/changes/prepare-deployment/: design.md  proposal.md  tasks.md
openspec/specs/api-contract/: spec.md
openspec/specs/ci-pipeline/: spec.md
shared/: contract.yaml
(+38 files in other folders)
