[project]
name = "ai-interviewer-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Interviewer Platform"
requires-python = ">=3.12,<3.13"
dependencies = [
  "asgi-correlation-id>=5.0.1",
  "fastapi==0.137.1",
  "httpx2>=2.4,<3",
  "psycopg[binary]>=3.3.2",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.14.1",
  "sqlalchemy>=2.0.51",
  "structlog>=26.1.0",
  "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
  "alembic>=1.17.2",
  "deepdiff>=8.6.1",
  "deptry>=0.24.0",
  "factory-boy>=3.3.3",
  "faker>=40.23.0",
  "mutmut>=3.6.0",
  "pip-audit>=2.10.1",
  "pytest>=9.1.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pyyaml>=6.0.3",
  "pyright>=1.1.407",
  "radon>=6.0.1",
  "ruff>=0.15.17",
  # Dev-only OpenAPI contract fuzzer. Sole reason `httpx` appears transitively in
  # uv.lock; the app HTTP client boundary is httpx2 (see README "HTTP client boundary").
  "schemathesis>=4.21.8",
  "sqlfluff>=3.5.0",
  "testcontainers[postgres]>=4.13.2",
  "vulture>=2.14",
  "xenon>=0.9.3",
  "httpx2-pytest>=1.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "UP", "B", "C4", "SIM", "S", "RUF"]
ignore = ["E501", "COM812", "ISC001"]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Body",
  "fastapi.Path",
  "fastapi.Header",
  "fastapi.Cookie",
  "fastapi.File",
  "fastapi.Form",
  "fastapi.Security",
]

[tool.ruff.lint.isort]
known-first-party = ["app", "scripts"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"app/**/__init__.py" = ["F401"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["app", "scripts", "tests"]
exclude = ["**/__pycache__", "alembic/versions"]
reportMissingImports = "error"
reportMissingTypeStubs = "none"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"
markers = [
  "contract: OpenAPI contract and drift checks",
  "db: database and migration checks",
  "integration: ASGI or persistence integration checks",
  "unit: pure unit checks",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
  "tests/*",
  "alembic/versions/*",
  # DB-gated modules are omitted from the fast (non-DB) coverage gate.
  # These require Testcontainers/Docker for meaningful coverage.
  "app/repositories.py",
  "app/routes/*",
  "app/engine/orchestrator.py",
  "app/deps.py",
]

[tool.coverage.report]
# Threshold reflects the focused fast unit suite (policy, owners, errors, config,
# rationales, JSONB schemas, app wiring). Integration-heavy modules — turn flow,
# evaluation, generation, and persistence — are exercised by the DB-gated suite.
fail_under = 45
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.",
  "@overload",
]

[tool.deptry]
known_first_party = ["app", "scripts"]

[tool.deptry.package_module_name_map]
"asgi-correlation-id" = "asgi_correlation_id"
"factory-boy" = "factory"
"pyyaml" = "yaml"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "faker",
  "factory-boy",
  "mutmut",
  "psycopg",
  "pytest-cov",
  "radon",
  "schemathesis",
  "testcontainers",
  "uvicorn",
  "vulture",
  "xenon",
]
DEP004 = ["deepdiff", "pyyaml", "yaml"]

[tool.vulture]
exclude = [".venv/", "alembic/versions/"]
ignore_decorators = [
  "@app.get",
  "@app.post",
  "@app.put",
  "@app.patch",
  "@app.delete",
  "@field_validator",
  "@model_validator",
]
ignore_names = ["model_config", "upgrade", "downgrade"]
min_confidence = 100
sort_by_size = true

[tool.mutmut]
source_paths = ["app/"]
pytest_add_cli_args_test_selection = ["tests/", "-m", "not contract and not db", "-k", "not test_openapi_generation"]
also_copy = ["scripts/"]

[tool.sqlfluff.core]
dialect = "postgres"
max_line_length = 100
exclude_rules = ["LT05"]
large_file_skip_byte_limit = 0
